Clean up CSS, remove grey background from images, add image files, fix westeros map background on page, fix sticky hover on mobile by removing hover effect

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,49 @@
 .App {
   align-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.main-page {
-  margin-left: 25%;
-  margin-right: 25%;
+html body {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  background-image: url("./resources/westeros.png");
+  position: absolute;
+  min-height: 100%;
+  z-index: -1;
+  background-repeat: repeat-y;
+  background-size: 100%;
 }
 
 .main-header {
-  margin-left: 10%;
-  margin-right: 10%;
-  font-size: 100px;
+  margin-left: 5%;
+  margin-right: 5%;
+  --min-font-size: 40px;
+  --min-viewport-width: 375px;
+  font-size: calc(
+    var(--min-font-size) + 80 * ((100vw - var(--min-viewport-width)) / 1065)
+  );
   text-align: center;
 }
 
+.main-page {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
 .main-header::after {
-  content: url("https://i.pinimg.com/originals/9e/5c/eb/9e5ceb24a3da8028ad558eccf0a92cea.png");
+  content: url("./resources/iron-throne.png");
   position: absolute;
   margin-top: 70px;
   opacity: 0.2;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .death-overlay {
@@ -35,22 +53,20 @@
   height: 100%;
 }
 
-.image-grid {
-  position: relative;
+.name-form {
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
-.btn-primary {
-  border: 0 none;
-  background-color: black;
+.form-control {
+  margin-top: 80px;
+  text-align: center;
 }
 
 .submit-btn {
   width: 100%;
-}
-
-.pick-again-btn {
-  width: 200px;
-  height: 75px;
+  border: 0 none;
+  background-color: black;
 }
 
 .submitted {
@@ -59,12 +75,7 @@
   align-content: center;
 }
 
-.form-control {
-  margin-top: 80px;
-  text-align: center;
-}
-
-.name-form {
-  margin-left: 20%;
-  margin-right: 20%;
+.pick-again-btn {
+  width: 200px;
+  height: 75px;
 }
